# shopsentry

./: .gitignore  Makefile  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: feature_catalog.md  future_ideas.md  model_catalog.md
feature_repo/feature_repo/: feature_store.yaml  fraud_features.py  session_features.py
models/: data_loader.py
models/anomaly/: autoencoder.py  isolation_forest.py
pipeline/: readme.MD  spark_streaming.py
pipeline/feature_engine/: features.py
pipeline/ingestion/: stream_consumer.py
simulator/: constants.py  consumer.py  event_schema.py  producer.py  run.py  scenarios.yaml
simulator/agents/: base_agent.py  bot_agent.py  churning_user.py  fraud_ring.py  normal_user.py
tests/integration/: test_data_quality.py
tests/unit/: test_agents.py  test_event_schema.py  test_features.py
