[project]
name = "shopsentry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "confluent-kafka",
]


[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"] 

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true